--- a/06_decorators/Decorator Example.ipynb
+++ b/06_decorators/Decorator Example.ipynb
@@ -1,6 +1,255 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e32e3e4-ad4e-48da-9a07-a7bc2d63e76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import json\n",
+    "from typing import Callable, List, Optional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cb48117-eb68-4189-a888-e7110a488660",
+   "metadata": {},
+   "source": [
+    "# Basic Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e48db8-9eae-48d8-a42b-0bb69b4c674f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# some simple function printing a string\n",
+    "def show_me(text: str):\n",
+    "    print(text, end=\"\")\n",
+    "    \n",
+    "show_me(\"blue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bc50b7f-253c-4416-8a00-b934366b0598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a function that takes another function and returns an altered function\n",
+    "# this will be used as our decorator\n",
+    "def sparkly(func: Callable) -> Callable:\n",
+    "    def inner(*args, **kwargs):\n",
+    "        print(\"~*~*\", end=\"\")\n",
+    "        func(*args, **kwargs)\n",
+    "        print(\"*~*~\")\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cce17736-4815-4120-9529-15567f7aa28e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using our one function as a decorator for the other\n",
+    "@sparkly\n",
+    "def show_me(text: str):\n",
+    "    print(text, end=\"\")\n",
+    "    \n",
+    "show_me(\"blue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7f9308-41e6-4bf1-a7c7-2c80e08f1166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this gives the same result as above, this is practically what the \"decorating\" does\n",
+    "def show_me(text: str):\n",
+    "    print(text, end=\"\")\n",
+    "    \n",
+    "show_me = sparkly(show_me)\n",
+    "show_me(\"blue\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6b4006-23fe-441f-88e7-f356a590e022",
+   "metadata": {},
+   "source": [
+    "# Useful Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7d89ab7-905c-419f-9e8f-5244f55984a5",
+   "metadata": {},
+   "source": [
+    "## Silencing a lot of output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "decefbe9-8476-49a4-961b-ebc6c7a01187",
+   "metadata": {},
+   "source": [
+    "Note: **don't** broadly silence errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9dbf4c3-a0af-47e3-8da4-96e9bba09475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install loguru"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32aed946-a896-4b98-a987-fd5ccaa4321b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "from contextlib import redirect_stdout\n",
+    "\n",
+    "from loguru import logger\n",
+    "logger.remove()  # removing the logging handler initialized by jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7716dbb9-8d97-4321-b605-54878ddf4edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets pretend this is a function we have no direct control over but we import and use it\n",
+    "def noisy_imported_function() -> int:\n",
+    "    logger.add(sys.stdout, level=\"INFO\")\n",
+    "    logger.info(\"we will start now!\")\n",
+    "    a = 2 + 2\n",
+    "    logger.success(\"that went well\")\n",
+    "    b = 1 + 3\n",
+    "    logger.success(\"nice going\")\n",
+    "    if a == b:\n",
+    "        logger.info(\"we entered the if\")\n",
+    "        c = 2 * a\n",
+    "    else:\n",
+    "        logger.warning(\"an if went to the else!\")\n",
+    "        c = a + b\n",
+    "    logger.info(\"the func is done and will return now\")\n",
+    "    logger.remove()\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed3a153-b2a5-47ef-979f-040f79e28067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy_imported_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f946c31c-d762-43bd-afef-fca05127f362",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# our decorator\n",
+    "def silent(func: Callable) -> Callable:\n",
+    "    def inner(*args, **kwargs):\n",
+    "        with redirect_stdout(os.devnull):\n",
+    "            func(*args, **kwargs)\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0342ea14-6865-43b7-ac80-47fef6b06ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@silent\n",
+    "def my_usecase():\n",
+    "    # doing something\n",
+    "    c = noisy_imported_function()\n",
+    "    return c + 1\n",
+    "\n",
+    "my_usecase()\n",
+    "print(\"enjoy the silence\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36fa38c6-8a0c-4bf4-bf35-fd7e7e2032a1",
+   "metadata": {},
+   "source": [
+    "## Adding a timer to a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e76a8f7f-ab54-4089-8197-051f4d0daf7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9cb70a-c5c7-4507-9312-ca7e084a6a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def timed(func: Callable) -> Callable:\n",
+    "    def inner(*args, **kwargs):\n",
+    "        start = time.time()\n",
+    "        func(*args, **kwargs)\n",
+    "        end = time.time()\n",
+    "        print(f\"took {end - start:.2f} seconds\")\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ccb597b-708c-4d1d-a995-0fbbc616929c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@timed\n",
+    "def expensive_function():\n",
+    "    for i in range(5):\n",
+    "        print(\".\", end=\"\")\n",
+    "        time.sleep(1)\n",
+    "    print(\"done\")\n",
+    "    \n",
+    "expensive_function()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7828f90c",
    "metadata": {},
@@ -22,18 +271,6 @@
    "metadata": {},
    "source": [
     "Note: Based on mCoding's [Python staticmethod and classmethod video](https://www.youtube.com/watch?v=SXApHXsDe8I)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4f4d0ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "import json\n",
-    "from typing import List, Optional"
    ]
   },
   {
@@ -493,10 +730,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c12664af-26cb-4c9b-a3df-10a4853e1ec0",
+   "metadata": {},
+   "source": [
+    "# Other Applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ac08b4b",
    "metadata": {},
    "source": [
-    "# `pytest` Decorators"
+    "## `pytest` Decorators"
    ]
   },
   {
@@ -534,7 +779,7 @@
    "id": "e75bad6e",
    "metadata": {},
    "source": [
-    "## parametrize"
+    "### parametrize"
    ]
   },
   {
@@ -555,7 +800,7 @@
    "id": "1410930c",
    "metadata": {},
    "source": [
-    "## fixture"
+    "### fixture"
    ]
   },
   {
@@ -586,7 +831,7 @@
    "id": "d4204998",
    "metadata": {},
    "source": [
-    "# CLI with `click`"
+    "## CLI with `click`"
    ]
   },
   {
